--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,7 +1,12 @@
 /*
-font-family: 'Lato', sans-serif;
 font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif;
 */
+
+:root {
+    --fopen: font-family: 'Open Sans', sans-serif;;
+    --fmont: font-family: 'Montserrat', sans-serif;;
+  }
 
 .master,
 header,
@@ -13,10 +18,14 @@ h1,h2,h3,h4,h5,h6{
     float: left;
     position: relative;
 }
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Montserrat', sans-serif;
+}
 
 p{
     width: 100%;
     float: left;
+    font-family: 'Open Sans', sans-serif;
 }
 
 section{
@@ -57,19 +66,476 @@ figure img{
     float: left;
     margin-bottom: 40px;
 }
+.section-title h3{
+    font-size: 36px;
+    font-weight: bold;
+}
 
 .btn{
     min-width: 120px;
     padding: 15px 30px;
     font-size: 14px;
+    font-weight: 600;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
 }
 .btn-primary{
     background: #026B33;
-    color: #fff;
+    color: #E3DDD2;
     border: none;
 }
 .btn-secondary{
     background: none;
     border: 2px solid #026B33;
     color: #026B33;
+}
+.wa-btn{
+    background: #1BD741;
+    color: #E3DDD2;
+    font-weight: 700;
+}
+.wa-btn:hover{
+    background: #3df963;
+    color: #E3DDD2;
+}
+.tg-btn{
+    background: #0088CC;
+    color: #E3DDD2;
+    font-weight: 700;
+}
+.tg-btn:hover{
+    background: #22aaee;
+    color: #E3DDD2;
+}
+.btn i{
+    margin-right: 10px;
+}
+
+@media (min-width: 1200px){
+    .container {
+        max-width: 1200px;
+    }
+}
+
+header{
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    transition: all ease-out 0.3s;
+    -webkit-transition: all ease-out 0.3s;
+    -moz-transition: all ease-out 0.3s;
+    -ms-transition: all ease-out 0.3s;
+    -o-transition: all ease-out 0.3s;
+}
+header.scrolled{
+    background: #212121;
+}
+.logo{
+    height: 60px;
+    width: 160px;
+    float: left;
+}
+.logo img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.menu{
+    width: calc(100% - 160px);
+    float: left;
+    text-align: right;
+}
+.menu a{
+    font-size: 16px;
+    color: #E3DDD2;
+    font-weight: 600;
+    padding: 15px 20px;
+    display: inline-block;
+}
+.menu a:hover{
+    text-decoration: none;
+    color: #fff;
+}
+.menu a.btn{
+    padding: 15px 30px;
+    margin-left: 20px;
+}
+
+#home{
+    padding-top: 0;
+    padding-bottom: 40px;
+}
+#home .item{
+    width: 100%;
+    height: 0;
+    padding-top: 58%;
+    position: relative;
+}
+#home .item figure{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+#home .item .container{
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: calc((100vw - 1200px) / 2);
+}
+#home .item .row{
+    height: 100%;
+}
+#home .text{
+    transform: translateY(-60px);
+    -webkit-transform: translateY(-60px);
+    -moz-transform: translateY(-60px);
+    -ms-transform: translateY(-60px);
+    -o-transform: translateY(-60px);
+}
+#home .text .subtitle{
+    font-size: 20px;
+    padding: 5px 20px;
+    background: #FB8903;
+    width: auto;
+    font-weight: bold;
+}
+#home .text h1{
+    font-size: 64px;
+    color: #E3DDD2;
+    font-weight: bold;
+}
+#home .text p{
+    font-size: 16px;
+    color: rgba(255,255,255,0.8);
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 0 30px;
+}
+#home .text .btn-groups a{
+    font-weight: 600;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#produk{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.product-card{
+    margin-bottom: 30px;
+}
+.product-card .text h4{
+    font-family: var(--fopen);
+    font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.product-card .text h4 a{
+    color: #212121;
+}
+.product-card .text .price{
+    font-size: 20px;
+    font-weight: 700;
+    color: #212121;
+}
+.product-card .text .price span{
+    font-size: 14px;
+    color: #777;
+    margin-left: 10px;
+    position: relative;
+    font-weight: 300;
+    display: inline-block;
+    transform: translateY(-3px);
+    -webkit-transform: translateY(-3px);
+    -moz-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
+    -o-transform: translateY(-3px);
+}
+.product-card .text .price span::before{
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #777;
+    position: absolute;
+    left: 0;
+    top: 50%;
+}
+
+#fitur{
+    padding-top: 240px;
+    background: #f4f4f4 url(../images/fitur-divider.jpg) no-repeat top center;
+}
+
+.fitur-card{
+    width: 100%;
+    float: left;
+    position: relative;
+    background: #212121;
+}
+.fitur-card h4{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 100px 30px 40px;
+    font-size: 20px;
+    color: #E3DDD2;
+    font-weight: 700;
+    font-family: var(--fmont);
+    text-align: center;
+    width: 100%;
+    margin-bottom: 0;
+    background: linear-gradient(0deg, rgba(15,13,29,0.8) 0%, rgba(15,13,29,0) 100%);
+}
+.fitur-card figure{
+    opacity: 0.5;
+    margin-bottom: 0;
+}
+
+#cta{
+    padding: 0;
+}
+#cta .container{
+    padding: 80px;
+    background: url(../images/quote-bg.png) no-repeat center;
+    background-size: contain;
+    z-index: 3;
+    position: relative;
+}
+#cta h3{
+    font-size: 32px;
+    color: #E3DDD2;
+    font-weight: 700;
+}
+#cta::before{
+    content: "";
+    width: 100%;
+    height: 140px;
+    background: #f4f4f4;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#testimonial{
+    padding-bottom: 110px;
+}
+.testimonial-slider::before{
+    content: "";
+    width: 80px;
+    height: 62px;
+    position: absolute;
+    right: 80px;
+    top: -30px;
+    background: url(../images/quote.png) no-repeat center;
+    z-index: 6;
+}
+.prof-card{
+    padding: 40px 60px;
+    width: 100%;
+    float: left;
+    background: #f4f4f4;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+.prof-card .pic{
+    width: 184px;
+    float: left;
+}
+.prof-card .text{
+    width: calc(100% - 184px);
+    float: left;
+    padding-left: 50px;
+} 
+.prof-card .text h4{
+    font-size: 24px;
+    font-weight: 700;
+    color: #333;
+}
+.prof-card .text span{
+    font-size: 16px;
+    color: #777;
+    width: 100%;
+    float: left;
+    margin-bottom: 20px;
+}
+.prof-card .text p{
+    font-family: var(--fmont);
+    font-size: 16px;
+    line-height: 200%;
+}
+
+.testimonial-slider .owl-prev,
+.testimonial-slider .owl-next{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: calc(50% - 20px);
+    overflow: hidden;
+    text-indent: -200px;
+} 
+.testimonial-slider .owl-prev{
+    background: url(../images/left.png) no-repeat center;
+    left: -100px;
+}
+.testimonial-slider .owl-prev:hover{
+    background: url(../images/left_hover.png) no-repeat center;
+}
+.testimonial-slider .owl-next{
+    background: url(../images/right.png) no-repeat center;
+    right: -100px;
+}
+.testimonial-slider .owl-next:hover{
+    background: url(../images/right-hover.png) no-repeat center;
+}
+
+
+footer{
+    padding: 80px 0 30px;
+    background: url(../images/footer-bg.jpg) no-repeat center;
+    background-size: cover;
+}
+footer h5{
+    font-size: 20px;
+    color: #E3DDD2;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+footer p{
+    color: #E3DDD2;
+    font-size: 14px;
+    font-family: var(--fopen);
+}
+footer p{
+    padding-left: 24px;
+    position: relative;
+}
+footer p i{
+    position: absolute;
+    left: 0;
+    top: 4px;
+}
+.foot-logo{
+    width: 240px;
+    display: block;
+    margin-bottom: 30px;
+}
+.foot-logo img{
+    width: 100%;
+}
+.social-bt{
+    width: 100%;
+    float: left;
+}
+.social-bt a{
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    padding-top: 6px;
+    color: #E3DDD2;
+    display: inline-block;
+    background: rgba(255,255,255,0.1);
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 1px solid rgba(255,255,255,0.5);
+    margin-right: 5px;
+    transition: all ease-out 0.3s;
+    -webkit-transition: all ease-out 0.3s;
+    -moz-transition: all ease-out 0.3s;
+    -ms-transition: all ease-out 0.3s;
+    -o-transition: all ease-out 0.3s;
+}
+.social-bt a:hover{
+    background: #000;
+    color: #E3DDD2;
+}
+
+.hero .owl-prev,
+.hero .owl-next{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    bottom: 50px;
+    overflow: hidden;
+    text-indent: -200px;
+    z-index: 5;
+} 
+.hero .owl-prev{
+    background: url(../images/left.png) no-repeat center;
+    left: 50%;
+    transform: translateX(-200px);
+    -webkit-transform: translateX(-200px);
+    -moz-transform: translateX(-200px);
+    -ms-transform: translateX(-200px);
+    -o-transform: translateX(-200px);
+}
+.hero .owl-prev:hover{
+    background: url(../images/left_hover.png) no-repeat center;
+}
+.hero .owl-next{
+    background: url(../images/right.png) no-repeat center;
+    right: 50%;
+    transform: translateX(200px);
+    -webkit-transform: translateX(200px);
+    -moz-transform: translateX(200px);
+    -ms-transform: translateX(200px);
+    -o-transform: translateX(200px);
+}
+.hero .owl-next:hover{
+    background: url(../images/right-hover.png) no-repeat center;
+}
+
+.testimonial-slider .owl-pagination,
+.hero .owl-pagination{
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+.testimonial-slider .owl-pagination{
+    bottom: -30px;
+}
+.testimonial-slider .owl-pagination .owl-page,
+.hero .owl-pagination .owl-page{
+    display: inline-block;
+    padding: 1px;
+}
+.testimonial-slider .owl-pagination .owl-page span,
+.hero .owl-pagination .owl-page span{
+    width: 10px;
+    height: 4px;
+    background: #d9d9d9;
+    display: block;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    transition: all ease-out 0.3s;
+    -webkit-transition: all ease-out 0.3s;
+    -moz-transition: all ease-out 0.3s;
+    -ms-transition: all ease-out 0.3s;
+    -o-transition: all ease-out 0.3s;
+}
+.testimonial-slider .owl-pagination .owl-page.active span,
+.hero .owl-pagination .owl-page.active span{
+    background: #212121;
+    width: 80px;
 }
